# Nfp-project

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
data/: BLAZ.json  MAO.json  MARQUES.json  SHIRTS.json  data1.json  empty.json  test.json  test1.1.json  test1.3.json  test1.4.json  test1.json  test13.json  test14.json  test2.1.json  test2.2.json  test2.3.json  test2.6.json  test2.json  test3.1.json  test3.2.json  test4.1.json  test4.json  test5.3.json  test5.json  test6.json  test9.json  testother1.json
src/: Color.hpp  FileFinder.hpp  Logger.cpp  Logger.h  MathCore.cpp  MathCore.h  Shape.cpp  Shape.hpp  UI.cpp  UI.h  app.cpp  data_warp.cpp  data_warp.h  draw_warp.cpp  draw_warp.h  ringbuffer.hpp  util.cpp  util.hpp
src/UI/: draw_engine.cpp  draw_engine.hpp
src/core/: Color.hpp
